# GoldenHandQuant

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.trae/rules/: architecture.md
config/: trading.yaml
docs/: sandbox_backtest_report.md  xtquant_setup.md
docs/feat/: 0601-integration-test-report.md
docs/helper/: system-map.html  user-guide.html
docs/refactor/: 优化Plan0428.md  分析报告0428.md  架构审查报告0428.md  覆盖验证报告0428.md
docs/rules/: architecture.md  codebase-map.md  coding-style.md  data-layer.md  debt-ledger.md  decision-log.md  domain-rules.md  live-trading.md  testing.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: assert-win32.js  shot.py  write-stamp.js
frontend/src/: App.vue  glossary.ts  main.ts  router.ts
output/: INSTRUCTION.md
output/docs/: 2026-07-05-执行日志.md  2026-07-05-竞赛策略评估.md
output/logs/: interaction.md
output/result/: output.md
output/work/: DESIGN.md
outputv2/: .gitattributes  INSTRUCTION.md
outputv2/code/: .gitignore  pom.xml
outputv2/logs/: interaction.md
outputv2/result/: output.md
outputv2/work/: DESIGN.md
resources/: backtest.yaml  backtest.yaml.example  backtest_multi_factor.yaml  trading.yaml
scripts/: b1_delisted_sensitivity.py  b1_survivorship_quant.py  b2_trend_gate_ab.py  b2_trend_gate_oos.py  backfill_delisted_akshare.py  backfill_st_status.py  check_frontend_fresh.py  diag_qmt_data.py  f01_investability_report.py  f01_totalmv_gate.py  fetch_index_bars.py  mainboard_f01_gate.py  migrate_market_cap.py  perf_smoke_vectorized.py  prune_research_runs.py  refix_feature_gap.py  refresh_instrument_names.py  research_ts_factors.py  research_ts_factors_reval.py  run_f01_investability.py  run_gateway_tests_wsl.py  run_multifactor_combo.py  run_with_xtquant.sh  seed_paper_trading.py  shadow_consistency_check.py  shadow_paper_equity.py  shadow_tuesday.py  sync_live_account.py  sync_market_cap.py  sync_trade_calendar.py  test_qmt_connection.py  tushare_harvest.py  ui_deep_probe.py  ui_interact_shot.py  ui_smoke.py  verify_all.py
scripts/windows/: account_eod.bat  register_shadow_tasks.ps1  shadow_morning.bat  shadow_postclose.bat
src/application/: algo_trading_app.py  anomaly_detector.py  attribution_app.py  auto_pause_manager.py  auto_trade_app.py  auto_trading_engine.py  backtest_app.py  config_app.py  dashboard_app.py  data_health.py  factor_pipeline_app.py  factor_test_app.py  health_service.py  live_signal_service.py  market_data_app.py  ml_deployment_app.py  monitor_service.py  multi_account_app.py  notification_hub.py  order_executor.py  order_service.py  order_ticket_app.py  portfolio_optimization_app.py  realtime_risk_app.py  reconciliation_app.py  shadow_audit.py  shadow_ops.py  signal_pipeline.py  strategy_comparison_app.py  strategy_lifecycle_app.py  strategy_runner.py  trading_app.py  trading_orchestrator.py  trading_scheduler.py
tests/: conftest.py  helpers.py
tests/application/: test_algo_trading_app.py  test_anomaly_detector.py  test_attribution_app.py  test_auto_pause_manager.py  test_auto_trade_app.py  test_auto_trading_engine.py  test_backtest_app.py  test_backtest_app_plot.py  test_backtest_with_circuit_breaker.py  test_config_app.py  test_dashboard_app.py  test_delisted_liquidation.py  test_factor_pipeline_app.py  (+26 more)
(+2011 files in other folders)
