[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GoldenHandQuant"
version = "0.1.0"
description = "A-share quantitative trading system (live + backtest)"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
    "duckdb>=1.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "tushare>=1.2.0",
    "rich>=13.0",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.1",
    "black>=23.0",
    "httpx",
]
qmt = ["xtquant"]  # Windows/WSL only
api = ["fastapi", "uvicorn"]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "optuna>=3.0",
    "joblib>=1.3",
    "scipy>=1.10",
]

[project.scripts]
quant = "src.interfaces.cli.quant:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--strict-markers", "--basetemp=.pytest_tmp"]  # 系统 Temp 的 pytest-of-* 目录 ACL 损坏不可删, 用项目内目录
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 120
target-version = ["py313"]
